# kirby-node

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  kirby.toml.example
.claude/skills/run-kirby-node/: SKILL.md
.github/workflows/: ci.yml
crates/kirby-custody/: Cargo.toml
crates/kirby-custody/src/: cosign_net.rs  ecdh.rs  guardian.rs  lib.rs
crates/kirby-genome/src/: brain.rs  capable.rs  diarist.rs  main.rs  memory.rs  metabolism.rs
crates/kirby-node/: Cargo.toml  build.rs
crates/kirby-node/examples/: hibernate_roundtrip.rs  routstr_create_key.rs
crates/kirby-node/src/: app_checkpoint_run.rs  boot.rs  brokered_run.rs  checkpoint.rs  config.rs  egress_run.rs  engram.rs  failover_detect.rs  firecracker.rs  fleet.rs  fleet_reconcile.rs  fleet_supervisor.rs  frost_identity.rs  full_loop_run.rs  funding.rs  gateway.rs  hibernate.rs  idempotent_run.rs  keyset_provisioning.rs  lease.rs  lib.rs  main.rs  meter.rs  meter_egress.rs  metered_run.rs  mint_rig.rs  nerve.rs  network.rs  nip60.rs  nip60_counter.rs  nip60_key.rs  nip60_reconcile.rs  nosplitbrain_run.rs  prereqs.rs  qsigner.rs  quorum_ecdh.rs  quorum_signer.rs  raft_lease.rs  rail.rs  relay_lease.rs  (+10 more)
crates/kirby-node/src/hibernate/: bundle.rs  holder.rs  roundtrip.rs  seal.rs  shamir.rs  unseal.rs  wake.rs
crates/kirby-node/tests/: app_checkpoint_restore_membrane.rs  app_checkpoint_resume.rs  brain_loop.rs  brokered_act.rs  capable_loop.rs  diarist_loop.rs  egress_lockdown.rs  egress_seam.rs  entropy_ordering.rs  entropy_resume.rs  fleet_host.rs  fleet_host_s2.rs  fleet_lease.rs  frost_quorum_publish.rs  full_loop.rs  fund_key.rs  g10_reproducible.rs  genome_boot.rs  idempotent_resume.rs  inbound_delivery.rs  memory_engram.rs  memory_loop.rs  metering_halt.rs  metering_halt_vz.rs  money_path_fence_clamp.rs  no_split_brain.rs  post_actuator.rs  relay_lease.rs  routstr_brain_ecash.rs  routstr_brain_live.rs  routstr_brain_logic.rs  routstr_key_brain.rs  run_agent.rs  snapshot_resume.rs  treasury_gateway.rs  vz_capable_e2e.rs  vz_egress.rs
crates/kirby-node/tests/common/: mod.rs
crates/kirby-proto/proto/: node_gateway.proto
crates/kirby-proto/src/: lib.rs
docs/: README.md  config.md  create-fund.md  mac-build-and-run.md  spawn-over-nostr.md  vz-build-sequence.md  vz-macos-backend-sketch.md  zero-config.md
nix/: genome-image-aarch64.nix  guest-kernel-aarch64.nix
plans/: kirby-frost-unified-identity-spec-20260701.md  kirby-npub-canonical-p1-20260701.md
scripts/: engram-store-test.sh  lint-macos-cfg.py
