[workspace]
resolver = "2"
members = [
    "crates/kirby-node",
    "crates/kirby-proto",
    "crates/kirby-genome",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.90"

# Pinned versions for the spike. Alpha and semi-stable libs (fctools, aya,
# openraft) are pinned exactly because they churn (spec section 11). The
# daemon-only deps live here; the genome crate keeps its own lean set so the
# musl static build stays small.
[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
tonic = "0.12"
tonic-build = "0.12"
# toml parses the `kirby run` config file (kirby.toml): one file from nothing to a
# live sovereign agent. default-features keep it lean; it is daemon/host-side only
# (the genome crate never parses config), so it does not touch the musl build.
toml = "0.8"

# openraft drives the embedded lease + no-split-brain consensus (spec 3.5, 4.3,
# D-4, D-17, gate G8). Pinned EXACTLY: openraft is pre-1.0 and churns (spec
# section 11). The 0.9 line is the most stable, documented release (the storage-v2
# RaftLogStorage/RaftStateMachine split + RaftNetwork over a custom transport). The
# serde feature is required: the lease type config, the log entries, and the RPC
# wire are all serialized over the loopback TCP transport (D-17).
openraft = { version = "=0.9.21", features = ["serde", "storage-v2"] }

# The CDK ecash stack for the C-6 brokered act (gate G5, D-16): the daemon's
# real rail settles ecash on a LOCAL cdk-mintd fakewallet mint over host
# networking. Pinned to the upstream crates.io release (cdk 0.17.1). The rail
# uses only standard cdk APIs, so the repo builds with no private dependency.
# cdk + cdk-sqlite + cdk-fake-wallet are the RAIL's runtime deps
# (the funded wallet, its in-memory store, the fake melt invoice); cdk-mintd is
# TEST-ONLY (it boots the mint in the G5 test). These pull a large tree; the
# first build is slow (the spec flags this).
cdk = { version = "0.17.1", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.17.1", default-features = false, features = ["wallet"] }
cdk-fake-wallet = { version = "0.17.1" }
cdk-mintd = { version = "0.17.1", default-features = false, features = ["fakewallet", "sqlite"] }
