[package]
name = "kirby-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# The node daemon: one Tokio process per node (spec 5). C-1 shipped the skeleton
# and the host-prereqs gate. C-3 added the vsock gateway server plus the
# persisted treasury: tonic and prost (the gRPC service), tokio-vsock (the vsock
# transport, tonic012 feature matches tonic 0.12), sled (the persisted treasury
# counter and dedupe ledger, spec 3.2 / 4.2), and rand (the GetEntropyNonce host
# CSPRNG, spec 3.4). C-2 adds fctools (it drives Firecracker plus the jailer, the
# untrusted-genome boundary, spec D-7) with the jailed executor, the sudo
# elevation spawner (the locked launch path), and the tokio runtime backend, on
# the nix syscall backend. C-4 adds cgroups-rs (read the VM cgroup cpu.stat +
# memory.current to bill the treasury) and libc (the cgroup-based VMM kill for
# the budget-death halt). The eBPF egress-byte meter (aya) is DEFERRED to C-5:
# it rides with the per-VM TAP, which does not exist yet. The nftables egress
# (C-5), the real rail (C-6), and the loopback-Raft lease (C-9) add their deps in
# those chunks, to keep each tree clippy-clean with no unused crates.
[dependencies]
kirby-proto = { path = "../kirby-proto" }
# kirby-custody (S3a graft): the canonical FROST 2-of-3 taproot custody crate, now
# an IN-WORKSPACE member crate (crates/kirby-custody) -- the standalone sibling repo
# was moved into this repo so there is one clean project with no sibling-repo
# indirection. It supplies generate_dealer_keyset / group_xonly_q / key_packages /
# taproot_address and cosign_net::{npub_encode, nip01_event_id, NostrEvent}. This
# slice only DERIVES a per-agent FROST identity (FrostIdentity); it changes NO
# signing path. The crate resolves bitcoin 0.32 + secp256k1 0.29 + rand_core 0.6,
# which the node already has in-tree (via nostr-sdk/cdk), so no version bump.
kirby-custody = { path = "../kirby-custody" }
# bitcoin (S3a graft): only to name the XOnlyPublicKey type FrostIdentity::q_xonly
# returns (custody hands back the 32-byte x-only serialization). Pinned to the 0.32
# line custody/the node already resolve in-tree -- adds no new version, no new
# secp256k1. Host-side identity helper only; never crosses vsock, never in the genome.
bitcoin = "0.32"
# frost-secp256k1-tr (S3a graft): only to NAME the FROST PublicKeyPackage type in
# FrostIdentity's signatures (custody owns all the keygen/signing; this crate just
# loads + derives an identity from a group public key package). Pinned to the SAME
# 3.0 line custody uses, with the `serde` feature so the package serializes/persists
# identically to custody's keyset persistence. Host-side identity only; not in the
# genome, never crosses vsock, no signing here.
frost-secp256k1-tr = { version = "3.0.0", features = ["serde"] }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# toml parses the `kirby run` config file (kirby.toml). Host-side only (the genome
# never parses config), so it stays out of the musl build.
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tonic.workspace = true
prost.workspace = true
sled = "0.34"
rand = "0.9"
# async-trait: the SandboxBackend / SandboxInstance seam is dyn-dispatched (the
# daemon holds a `Box<dyn SandboxInstance>` and a backend trait object so a second
# backend can slot in), and dyn-compatible async trait methods need boxed futures.
# Already in the dependency graph via tonic; declared here as a direct dep.
async-trait = "0.1"
# tokio-stream wraps the Unix listener as a Stream for tonic's
# serve_with_incoming (Firecracker's host socket on Linux, and the VZ helper
# proxy socket on macOS).
tokio-stream = { version = "0.1", features = ["net"] }
# futures: used by the CLI to park long-running commands and by the Linux
# Firecracker backend to stream the guest serial console.
futures = "0.3"
# The CDK ecash stack for the C-6 brokered act (gate G5, D-16). The real rail
# (CdkEcashRail) holds a funded cdk Wallet (the host-only credential the genome
# never sees) and settles ecash by melting against the LOCAL fakewallet mint over
# HOST networking. cdk = the Wallet + melt API; cdk-sqlite = the wallet's
# in-memory store; cdk-fake-wallet = create_fake_invoice (the fake BOLT11 the melt
# pays so the mint marks it Paid and returns a preimage = the real receipt, D-18).
# The wallet seed is drawn from the host CSPRNG (rand, already a dep). The mint is
# BOOTED in the G5 test (cdk-mintd, a dev-dependency). The credential lives only
# host-side; nothing CDK crosses vsock.
cdk = { workspace = true }
cdk-sqlite = { workspace = true }
cdk-fake-wallet = { workspace = true }
# The lease + no-split-brain fence (#9, gate G8 / F9) is now relay-native + FROST-signed
# (`relay_lease`): a Lease event is published to the SAME Nostr relay the nerve uses, so it
# works across LAN/NAT. The loopback Raft cluster was CUT (it was same-host only). The
# crypto rides the existing quorum_signer + nostr-sdk client; no new transport dependency.
# nostr-sdk is the host-side Nostr client for the "nerve" presence/discovery layer
# (slice 1): the daemon publishes a replaceable presence beacon and subscribes to
# the fleet over a relay (an outbound websocket, the same host-network path as the
# C-6 daemon->mint HTTP). It is daemon-side and UNPRIVILEGED (no sudo, no jailer),
# never crosses vsock, and never touches the genome. default-features = false keeps
# it lean: presence needs only the core (custom Kind, EventBuilder, Filter, Keys,
# subscriptions, NIP-19 bech32), none of the optional NIPs/tor (default = []). It
# brings its own consistent secp256k1/tokio-tungstenite/reqwest, so it is NOT
# coupled to cdk's transitive versions. `nip44` is enabled for the durable
# mind-state EngramStore (Chunk-2): engrams are NIP-44 self-encrypted (encrypt to
# the node's OWN pubkey) so memory is private to the agent's key. This is the SAME
# self-ECDH path cdk's NUT-27 wallet-backup already exercises in-tree, so the lib
# supports self-pubkey ECDH (the F8 gate).
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44"] }
# sha2 content-addresses app-checkpoint blobs for the portable Linux<->macOS
# resume seam. The blob stays opaque to the daemon; the hash is only the stable
# reference. It also backs the EngramStore's HMAC d-tag + HKDF key separation.
sha2 = "0.10"
# blahaj is the Shamir secret-sharing backend for hibernation (H1): it splits the
# master seed 2-of-3 so any two of three holders reconstruct it. It is the maintained,
# RUSTSEC-recommended fix of the `sharks` crate (RUSTSEC-2024-0398: a biased coefficient
# draw Cure53 found exploitable when the SAME secret is re-shared ~500-1500 times —
# exactly hibernation's re-split-every-seal pattern). Textbook GF(256) byte-wise Shamir
# (the right construction for a raw byte seed), no elliptic-curve machinery. Host-side
# only (hibernation never crosses vsock); kept behind hibernate::shamir so the SSS
# backend can be swapped without touching callers.
blahaj = "0.6"
# hex encodes share commitments as the lowercase-hex strings the H0 hibernate wire
# types carry. Already in the graph transitively; pinned direct for the hibernate module.
hex = "0.4"
# zeroize (with the derive macros) wipes the master seed + derived subkeys on drop so no
# plaintext secret lingers in freed memory (hibernation seed hygiene, H1). The
# zeroize_derive feature provides #[derive(Zeroize, ZeroizeOnDrop)].
zeroize = { version = "1", features = ["zeroize_derive"] }
# reqwest is the daemon-side HTTP client RoutstrBrain POSTs the OpenAI-compat
# completion to (an outbound HTTPS call on the same host-network path as the C-6
# daemon->mint settle and the nerve relay websocket; the genome never makes it).
# default-features = false + rustls-tls pins the SAME rustls/ring TLS stack already
# in the tree (via nostr-sdk/cdk) so no second TLS provider (native-tls/aws-lc-rs)
# is pulled; `json` for the request/response bodies. Bearer X-Cashu safety
# (redirects disabled, redaction) is enforced in rail.rs, not here.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# uuid types the cdk send-saga operation_id (Wallet::prepare_send -> operation_id()
# -> revoke_send): RoutstrBrain carries it on a SendHandle so an un-consumed X-Cashu
# send can be reclaimed with revoke_send (R2-1, the same-wallet reclaim primitive).
# Already in the tree transitively via cdk; declared direct so the seam can name it.
uuid = "1"
# hkdf + hmac back the EngramStore's NIP-AE key derivation (Chunk-2): the self-ECDH
# root (the NIP-44 conversation key with the node's own pubkey) is HKDF-expanded into
# a separate d-tag key (domain separation, codex C-low), and the per-slug `d` tag is
# HMAC-SHA256(K_dtag, slug) so the slug never appears in plaintext on a relay. Pinned
# to the RustCrypto 0.12 generation that pairs with sha2 0.10's digest 0.10 traits.
hkdf = "0.12"
hmac = "0.12"
# chacha20poly1305 is the at-rest AEAD for the cross-machine FROST keyset (S5/S6
# chunk 3): when a holder share moves to its own sealed sink, that sink SEALS the
# share KeyPackage at rest with XChaCha20Poly1305 under a host-bound key
# (HKDF-SHA256 over the machine binding + a per-sink random salt). XChaCha's 192-bit
# random nonce makes per-seal nonces collision-safe without a counter, and it is the
# SAME well-reviewed RustCrypto construction NIP-44 already uses in-tree (so no new
# crypto family enters the build). Pinned to the 0.10 line already resolved in the
# lock (via nostr-sdk's nip44); pairs with the aead 0.5 traits. Host-side only (the
# genome never seals a share); a sealed share never crosses vsock.
chacha20poly1305 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7.2", features = ["tonic012"] }
# fctools drives Firecracker plus the jailer (spec D-7). Pinned exactly: it is a
# pre-1.0 alpha that churns (spec section 11). Features: the VM layer plus the
# jailed executor (the jailer is the security boundary), the elevation spawners
# (the daemon launches the jailer via sudo, the locked decision), the tokio
# runtime, and the nix syscall backend (a binary must choose one).
fctools = { version = "=0.7.0-alpha.2", default-features = false, features = [
    "tokio-runtime",
    "vm",
    "jailed-vmm-executor",
    "elevation-process-spawners",
    "nix-syscall-backend",
] }
# cgroups-rs reads the VM's cgroup v2 cpu.stat (usage_usec) and memory.current to
# bill the treasury on a tick (spec 3.3, D-7, the C-4 meter). libc is the raw
# kill(2) for the daemon-initiated VMM kill via the VM's cgroup.procs.
cgroups-rs = "0.5"
libc = "0.2"
# aya is the userspace side of the eBPF egress-byte meter (spec 3.3, D-7, the
# C-5 meter, gate G4). It loads the kernel program built by build.rs from the
# kirby-ebpf crate and attaches it to the VM TAP.
aya = "=0.13.1"

[target.'cfg(target_os = "macos")'.dependencies]
# libc is used only for SIGTERM delivery to the Swift VZ helper. The helper owns
# VZVirtualMachine and stops the guest on SIGTERM; Rust remains the daemon
# authority that decides when to halt.
libc = "0.2"

[[bin]]
name = "kirby-node"
path = "src/main.rs"

# Dev-only: the in-process tonic client/server test (no microVM) drives the
# gateway over a duplex stream. tower (service_fn connector) and hyper-util
# (TokioIo) match tonic 0.12's transport. These are test-only and do not enter
# the daemon. (tokio-stream is now a regular dependency, used by the Firecracker
# vsock serve path.)
[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper-util = "0.1"
# cdk-mintd boots a REAL local fakewallet mint (a cdk-mintd HTTP mint with the
# cdk-fake-wallet Lightning backend) in the G5 test (tests/brokered_act.rs). It is
# TEST-ONLY (the daemon never embeds a mint); only the fakewallet + sqlite
# features, to keep the cln/lnd/ldk/bitcoind backends out of the build.
cdk-mintd = { workspace = true }
